# myschema

./: .gitignore  README.md  composer.json  main.py  myschema
config/: config.php  container.php
public/: index.php
pyserver/: main.py  pyproject.toml
resources/blocks/: 404.json  create-page-form.json  dashboard.json
resources/forms/: create-page.json
resources/queries/: create-page.sql
resources/templates/: dashboard.html  dashboard.json
src/Action/: Action.php  ActionDispatch.php  ActionDispatchFactory.php  ActionHandlerInterface.php  ActionMiddleware.php  ActionMiddlewareFactory.php  ActionResult.php  ConfigProvider.php  LazyActionListener.php  README.md
src/Admin/: ConfigProvider.php
src/App/: AppManager.php  AppManagerFactory.php  ConfigProvider.php
src/Application/: Action.php  ActionDispatch.php  ActionDispatchFactory.php  ActionHandlerInterface.php  ActionMiddleware.php  ActionMiddlewareFactory.php  ActionResult.php  ConfigProvider.php  ConsoleCommandFactory.php  LazyActionListener.php  README.md  ServiceFactoryTrait.php
src/Command/: BaseCommand.php  CommandFactory.php  CommandMiddleware.php  CommandMiddlewareFactory.php  CommandOutputRendererInterface.php  ConfigProvider.php  Psr7ResponseOutputInterface.php
src/Content/: ConfigProvider.php  ContentMetaStatusInterface.php  ContentVisibilityInterface.php
src/Database/: ConfigProvider.php  Connection.php  ConnectionFactory.php  DatabaseInterface.php  README.md
src/EventManager/: ConfigProvider.php  Event.php  EventDispatcher.php  EventDispatcherFactory.php  EventListenerInterface.php  (+1 more)
(+171 files in other folders)
